# InterviewProblems

./: .gitignore  .gitmodules  README.md
problem1/: CMakeLists.txt  unixRun.sh
problem1/src/: main.cpp
problem2/: CMakeLists.txt  unixRun.sh
problem2/src/: Circle.cpp  Circle.h  Rect.cpp  Rect.h  Types.h  main.cpp
problem3/: CMakeLists.txt  unixRun.sh
problem3/src/: data.txt  main.cpp
